--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ solana-sdk = "2.0.6"
 solana-client = "2.0.6"
 solana-transaction-status = "2.0.6"
 tokio = "1.39.3"
+tokio-util = "0.7.11"
 futures = "0.3.30"
 thiserror = "1.0.63"
 warp = "0.3.7"
