--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,5 +25,6 @@ solana-transaction-status = "2.0.6"
 tokio = "1.39.3"
 tokio-util = "0.7.11"
 futures = "0.3.30"
+rusqlite = "0.32.1"
 thiserror = "1.0.63"
 warp = "0.3.7"
